# PFC

./: CMakeLists.txt  CMakeLists.txt~  JOURNAL.txt  TODO.txt~  graph.launch  graph.launch~  hokuyo.launch  hokuyo.launch~  joystick_teleop.launch  mapping.launch  myworld4.world~  package.xml  pioneer.launch  result.ppm  roomba_map.world  roomba_map.world~  simple.world  simple.world~  stage.launch~  turtlebot.launch  voronoi.conf  voronoi.conf~  voronoi.launch  voronoi.launch~  voronoi.world  voronoi.world~  voronoifour.world  voronoifour.world~
images/: 1-iteration_26.ppm  1-iteration_8.ppm
include/: controlLaw.h  graphBuilder.h  graphBuilder.h~  robot.h
include/voronoi/: Robot.h  Voronoi.h  controlLaw.h  graphBuilder.h  node.h  reportGen.h  rgb.h  robot.h  voronoi.h~
mapas/square/: map.pgm
src/: Robot.cpp  Voronoi.cpp  adaptingVoronoi.cpp  controlLaw.cpp  graphBuilder.cpp  reportGen.cpp  robot.cpp  voronoi.cpp
